# FaaSr-Functions

./: .gitignore  MANIFEST.in  README.md  WeatherGeographicPlotRanked_for_testing.json  WeatherGeographicPlot_for_testing.json  WeatherVisualizationDataStores_for_testing.json  WeatherVisualizationWorkflow.json  empty_function.py  geographic_weather_plot_for_testing.json  geographic_weather_plot_for_testing_plot.json  linear_workflow_py.json  pyproject.toml  requirements.txt  weather_visualization_py.json
.github/workflows/: GeographicWeatherPlotWorkflow-GetData.yml  GeographicWeatherPlotWorkflow-PlotData.yml  GeographicWeatherPlotWorkflow-ProcessData.yml  GeographicWeatherPlotWorkflowPlot-Empty.yml  GeographicWeatherPlotWorkflowPlot-PlotData.yml  LinearWorkflowPy-get-ghcnd-data.yml  LinearWorkflowPy-plot-data.yml  LinearWorkflowPy-process-data.yml  LinearWorkflowPy-process-precipitation.yml  LinearWorkflowPy-process-temperature-max.yml  LinearWorkflowPy-process-temperature-min.yml  LinearWorkflowPy-query-data.yml  WeatherGeographicPlot-GetData.yml  WeatherGeographicPlot-PlotData.yml  (+6 more)
FaaSr_py/: FaaSr.schema.json  setup.py
WeatherGeographicPlot/: README.md  WeatherGeographicPlot.json  WeatherGeographicPlotRanked.json
WeatherVisualization/: README.md  WeatherVisualization.json  WeatherVisualizationConditional.json  WeatherVisualizationDataStores.json
assets/: resize.sh
tutorial/: README.md  tutorial.json  tutorialLarger.json  tutorialOW.json  tutorialRpy.json  tutorial_larger.json
weather_visualization/: README.md  weather_visualization.json
(+44 files in other folders)
