[project]
name = "faasr-functions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faasr-py",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scipy>=1.16.2",
]

[tool.uv.sources]
faasr-py = { git = "https://github.com/dekkov/FaaSr-Backend.git" }
